@@ -40,6 +40,7 @@ endif::[]
 
 - Fixed span context fields for DynamoDB instrumentation {pull}1178[#1178]
 - Fixed span context fields for S3 instrumentation {pull}1179[#1179]
+- Update user agent info to match spec {pull}1182[#1182]
 
 [[release-notes-4.4.0]]
 ==== 4.4.0
